# jsonformatter

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPER_GUIDE.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  format-code.bat  json_formatter.py  pyproject.toml  quality-check.bat  requirements-dev.txt  requirements.txt  run.bat  start-dev.bat  start-manual.bat  start-prod.bat  start.bat  views.py
.github/workflows/: ci.yml
.kiro/specs/code-quality-improvements/: design.md  requirements.md  tasks.md
frontend/: index.html  package-lock.json  package.json
frontend/src/components/: CommentEditor.tsx  JSONEditor.tsx  Toolbar.tsx
frontend/src/pages/: Home.tsx
src/: __init__.py
src/core/: config.py  config.py.backup  config_header.txt  exceptions.py  logging.py  py.typed
src/models/: __init__.py  json_data.py
src/services/: __init__.py  comment_service.py  json_processor.py
src/utils/: __init__.py  validators.py
src/web/: __init__.py  app.py
src/web/middleware/: __init__.py  logging.py
src/web/routes/: __init__.py  api.py  web.py
static/: .gitkeep  script.js  style.css
templates/: .gitkeep  index.html
tests/: test_app.py  test_json_data.py  test_json_processor.py
